Add additional Set/Map of()